maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (isOverBaggle==false){
    keepHandOnSideWall()
  }
}
def keepHandOnSiDeWall(){
  left()
  if (isFacingWall==true){
    right()
    forward()
  }
  else{
    while (isFacingWall==false){
    forward
    }
    right
  } 
}